--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vitepress dev docs --port 9001",
     "build": "vitepress build docs",
-    "serve": "vitepress serve docs"
+    "serve": "vitepress serve docs",
+    "deploy": "yarn build && gh-pages -d docs/.vitepress/dist"
   },
   "dependencies": {
     "vitepress": "^1.0.0-alpha.28",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.56.1"
   }
 }
